# oboe

./: .gitignore  CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  README.md  flake.nix
crates/oboe/: Cargo.toml
crates/oboe-types/: Cargo.toml
crates/oboe-types/src/: lib.rs
crates/oboe/src/: cli.rs  effector.rs  main.rs  probe.rs  state.rs
module/: default.nix
