[workspace]
members = [
    "crates/oboe-types",
    "crates/oboe",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.89"
license = "MIT"
repository = "https://github.com/pleme-io/oboe"
authors = ["Luis D. <drzzln@protonmail.com>"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
hickory-resolver = "0.24"
nix = { version = "0.29", features = ["signal"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[workspace.lints.clippy]
pedantic = "warn"
