[package]
name = "oboe-types"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Typed primitives for the oboe adaptive DNS posture orchestrator — read from the blackmatter dns_posture JSON sidecar."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
